--- a/prototypes/dicetabletabbed.kv
+++ b/prototypes/dicetabletabbed.kv
@@ -2,34 +2,14 @@
 
 
 #tools
-<HorSlider>:
-    BoxLayout:
-        orientation:'vertical'
-        size_hint_x: None
-        width: 100
-        Label:
 
-            id:hor_title
-            font_size:15
-        Slider:
-            id:hor_slider
-            orientation:'horizontal'
-            min:0
-            max:10
-            value:1
-            step:1
-        Label:
-            text: str(int(hor_slider.value))
-            font_size:10
 <SizeButton>:
     text:'D' + str(self.die_size)
-<WeightIt>:
-    text:'record\nweights'
-    size_hint:None, None
-    size: 100, 50          
+
 <WeightsPopup>:
     size_hint: None, None
-    title: 'using weighted dice? for shame! cheater!'
+    title: ''
+    title_size: 0
     ScrollView:
         id:scroll_shell
         scroll_timeout:70
@@ -37,25 +17,26 @@
             id: contents
             orientation: 'tb-lr'
             size_hint: None, None
-            spacing: 10
-            padding: 10
-            size:1000, 1000
+
 
 <PlotPopup>:
     title: 'click the legend button for legend.  click on a label to highlight that plot.'
-    ScatterLayout:
-        id: graph_container
-        do_rotation: False
-        Graph:
-            id: graph
-            xlabel: 'the rolls'
-            ylabel: 'percent chance'
-            y_grid_label: True
-            x_grid_label: True
-            x_grid: True
-            y_grid: True
-            x_ticks_major: 2
-            y_ticks_major: 1
+    FloatLayout:
+        ScatterLayout:
+            id: graph_container
+            auto_bring_to_front: False
+            do_rotation: False
+            size_hint: 1,1
+            Graph:
+                id: graph
+                xlabel: 'the rolls'
+                ylabel: 'percent chance'
+                y_grid_label: True
+                x_grid_label: True
+                x_grid: True
+                y_grid: True
+                x_ticks_major: 2
+                y_ticks_major: 1
         Button:
             text:'done'
             size_hint: 0.1, 0.1
@@ -63,38 +44,49 @@
         Button:
             id: legend
             text:'legend'
-            size_hint: None, 0.1
-            width: 50
+            size_hint: None, 0.07
+            width: self.texture_size[0]
+            padding_x: 10
             pos_hint: {'x': 0, 'y': 0.9}
-           
 <PlotCheckBox>:
     orientation: 'horizontal'
     CheckBox:
         id: check_box
-        size_hint: 0.1, 0.5
+        size_hint: 0.1, 1
         active: root.active
+        canvas:
+            Color:
+                rgba: 1, 1, 1, 0.4  
+            Line: 
+                points: self.pos[0] + self.size[0]/4, self.pos[1] +self.size[1]/4, self.pos[0] + 3*self.size[0]/4, self.pos[1] + self.size[1]/4, self.pos[0] + 3*self.size[0]/4, self.pos[1] + 3*self.size[1]/4, self.pos[0] + self.size[0]/4, self.pos[1] + 3*self.size[1]/4, self.pos[0] + self.size[0]/4, self.pos[1] +self.size[1]/4
+                width: 3 
+                joint: 'miter'
+                cap: 'square'               
+                
     ScrollView:
         id:scroller
+        scroll_timeout: 550
+        bar_inactive_color: [0.7, 0.7, 0.7, 0.9]
         size_hint: 0.9, 1
-        Label:
+        FlashLabel:
             id:label
             text: root.text
             size_hint: None, 1
             width: self.texture_size[0]
 
 <PageBox>:
-    id:all_rolls
     orientation:'vertical'
     Label:
         id: page_box_title
         canvas:
             Color:
-                rgba: 1,0,0,0.5
+                rgba: 0.8,0,0,0.5
             Rectangle:
                 pos: self.pos
                 size: self.size
-        size_hint:1, .15
-        font_size: 20
+        size_hint:1, .04
+        halign: 'center'
+        valign: 'middle'
         text: 'TITLE'
         text_size:self.size
     BoxLayout:
@@ -112,20 +104,15 @@
             shorten_from: 'right'
             max_lines: 1
             on_press: root.show_page(root.current_page - 1)
-        TextInput:
+        NumberInput:
             id:jump_to
             size_hint: 0.25, 1
-            input_filter:'int'
-            multiline:False
-            on_text_validate: root.text_check(jump_to.text)
-            border: 1,3,1,3
-            padding_y: 1,1
-            font_size: (lambda:min(int(0.7 * self.height), int(0.35 * self.width)))()
+            on_number_val: root.text_check(self.text)
+
         Label:
             id:page_total
             size_hint: 0.25, 1
-            #text: '/%s' % (len(root.pages))
-            #font_size:int(0.7 * self.height)
+
             font_size: (lambda:min(int(0.7 * self.height), int(0.35 * self.width)))()
         Button:
             id:go_right
@@ -141,12 +128,12 @@
     Label:
         canvas:
             Color:
-                rgba: 0,1,0,0.5
+                rgba: 0.4,0.8,0.8,0.3
             Rectangle:
                 pos: self.pos
                 size: self.size
         id:text_container
-        size_hint: 1, 0.8
+        size_hint: 1, 0.91
         text:''
         text_size: self.width, self.height
 
@@ -157,19 +144,25 @@
 
 #big boxes
 <ChangeBox>:
-    Label: 
-        text: 'nothing added yet, use the "add" tab'
+    Label:
+        id: intro
+        text: ''
         text_size:self.size
-        font_size: 25
         valign: 'top'
         halign: 'center'
+
 
 <AddBox>:
     id:bob
     orientation:'vertical'
+    Label:
+        id: current
+        size_hint: 1, 0.1
+        text: 'no dice yet'
+        text_size: self.size
     BoxLayout:
         id: custom
-        size_hint:1, 0.3
+        size_hint:1, 0.2
         spacing: 30
         padding: 30
         BoxLayout:
@@ -177,35 +170,27 @@
             id: custom_size
             size_hint: 0.5, 1
             Label:
-                size_hint: 1, None
+                size_hint: 1, 0.6
                 text: 'type custom die size from 2-200'
-                font_size: 18
-                height: custom_size.height - custom_input.height
+
                 text_size: self.size
 
-            TextInput:
+            NumberInput:
                 id:custom_input
-                size_hint: 1, None
-                height: self.font_size + 10
-                input_filter:'int'
-                multiline:False
-                font_size: 20
-                on_text: root.assign_size_text()
-                border: 1,3,1,3
-                padding_y: 1,1
-        Button:
+                size_hint: 1, 0.4
+                on_number_val: root.assign_size_text(self.text)
+        FlashButton:
             id:make_weights
             size_hint: 0.5, 1
             text: 'make weights'
             text_size: self.size
-            font_size: 20
             halign: 'center'
             valign: 'middle'
-            on_press: root.add_weights()
+            on_press: self.delay(root.add_weights)
     BoxLayout:
         id: size_mod
         orientation: 'horizontal'
-        size_hint: 1, 0.4
+        size_hint: 1, 0.38
         GridLayout:
             id:presets
             rows: 2
@@ -240,9 +225,14 @@
                         Rectangle:
                             size:self.size
                             pos:self.pos
+    Label:
+        id: instructions
+        size_hint:1, 0.06
+        text: 'assign die size/weight/mod-----------------\n-------------------------add the assigned die'
+        halign: 'center'
     BoxLayout:
         id: add_it
-        size_hint:1, 0.25
+        size_hint:1, 0.21
 
 <InfoBox>:
     orientation:'vertical'
@@ -252,6 +242,7 @@
         size_hint: 1, 0.15
         text:'test'
         text_size: self.size
+        halign: 'center'
     ScrollView:
         id:table_str_wrapper
         size_hint: 1, 0.25
@@ -274,7 +265,7 @@
         size_hint: 1, 0.9
     BoxLayout:
         size_hint: 1, 0.1
-        Button:
+        FlashButton:
             id: graph_stuff
             text: 'graph it'
             text_size: self.size
@@ -282,16 +273,7 @@
             size_hint: 0.33, 1
             halign: 'center'
             valign: 'middle'
-            on_press: root.graph_it()
-        Button:
-            id: clear_all
-            text: 'clear history'
-            text_size: self.size
-            size: self.texture_size
-            size_hint: 0.33, 1
-            halign: 'center'
-            valign: 'middle'
-            on_press: root.clear_all()    
+            on_press: self.delay(root.graph_it)
         Button:
             id: clear_selected
             text: 'clear selected'
@@ -301,6 +283,17 @@
             halign: 'center'
             valign: 'middle'
             on_press: root.clear_selected()
+        Button:
+            id: clear_all
+            text: 'clear history'
+            text_size: self.size
+            size: self.texture_size
+            size_hint: 0.33, 1
+            halign: 'center'
+            valign: 'middle'
+            on_press: root.confirm.open()
+      
+
 <StatBox>:
     BoxLayout:
         spacing: 10
@@ -309,7 +302,6 @@
             id: table_info
             size_hint: 1, 0.2
             text: 'no dice yet'
-            font_size: 20
             text_size: self.size
             valign: 'middle'
             halign: 'center'
@@ -320,12 +312,12 @@
                 text:'value 1'
                 text_size: self.size
                 size_hint:0.25, 0.1
-                pos_hint: {'x': 0.1, 'y': 1}
+                pos_hint: {'x': 0.1, 'y': 0}
             Label:
                 size_hint:0.25, 0.1
                 text: 'value 2'
                 text_size: self.size
-                pos_hint: {'x': 0.5, 'y': 1}
+                pos_hint: {'x': 0.5, 'y': 0}
             #2nd row slider
             Slider:
                 id:start_slider
@@ -336,7 +328,7 @@
                 step:1
                 size_hint:0.25, 0.82
                 on_value:root.show_stats()
-                pos_hint: {'x': 0.2, 'y': 0.2}
+                pos_hint: {'x': 0.2, 'y': 0.0}
             Slider:
                 id:stop_slider
                 orientation:'vertical'
@@ -346,40 +338,29 @@
                 step:1
                 on_value:root.show_stats()
                 size_hint:0.25, 0.82
-                pos_hint: {'x': 0.6, 'y': 0.2}
+                pos_hint: {'x': 0.6, 'y': 0.0}
             #thrid row text input
             Label:
                 text:'may type\nin values'
                 text_size: self.size
                 size_hint:0.2, 0.15
-                pos_hint: {'x': 0.05, 'y': 0}
-            TextInput:
+                pos_hint: {'x': 0.01, 'y': 0.9}
+            NumberInput:
                 id:start_slider_text
-                input_filter:'int'
-                multiline:False
-                text: str(int(start_slider.value))
-                on_text_validate:root.assign_text_value(box='start')
-                border: 1,3,1,3
-                padding_y:1,1
-                font_size:(lambda:min(int(0.7 * self.height), int(0.3 * self.width)))()
+                text: '{:,}'.format(int(start_slider.value))
                 size_hint:0.3, 0.15
-                pos_hint: {'x': 0.2, 'y': 0.0}
-            TextInput:
+                pos_hint: {'x': 0.2, 'y': 0.9}
+                on_number_val: root.assign_text_value('start')
+            NumberInput:
                 id:stop_slider_text
-                input_filter:'int'
-                multiline:False
-                text: str(int(stop_slider.value))
-                on_text_validate:root.assign_text_value(box='stop')
+                text: '{:,}'.format(int(stop_slider.value))
                 size_hint:0.3, 0.15
-                border: 1,3,1,3
-                padding_y:1,1
-                font_size:(lambda:min(int(0.7 * self.height), int(0.3 * self.width)))()
-                pos_hint: {'x': 0.6, 'y': 0.0}
+                pos_hint: {'x': 0.6, 'y': 0.9}
+                on_number_val: root.assign_text_value('stop')
         Label:
             id:stat_text
             text:'no stats'
             text_size:self.size
-            font_size: 20
             #size: self.texture_size
             size_hint: 1, 0.4
             valign:'top'
