--- a/prototypes/dicetablewide.kv
+++ b/prototypes/dicetablewide.kv
@@ -341,7 +341,7 @@
                 pos_hint: {'x': 0.6, 'y': 0.0}
             #thrid row text input
             Label:
-                text:'may type\nin event_keys'
+                text:'may type\nin values'
                 text_size: self.size
                 size_hint:0.2, 0.15
                 pos_hint: {'x': 0.01, 'y': 0.9}
